Fixing Mobile C3 alignment issue

--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,8 @@ img, svg { display: block; }
 }
 .brand-reel {
   position: absolute;
-  left: 21px;
-  top: 23px;
+  left: 0.457em;
+  top: 0.5em;
   width: 17px;
   height: 17px;
   transform: translate(-50%, -50%);
@@ -214,8 +214,8 @@ img, svg { display: block; }
 }
 .lockup-reel {
   position: absolute;
-  left: 92px;
-  top: 100px;
+  left: 0.46em;
+  top: 0.5em;
   width: 70px;
   height: 70px;
   transform: translate(-50%, -50%);
